; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_op_priority.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_op_priority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @op_priority(i8 signext %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  %4 = load i8, i8* %3, align 1
  %5 = sext i8 %4 to i32
  switch i32 %5, label %8 [
    i32 38, label %6
    i32 124, label %7
  ]

6:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %10

7:                                                ; preds = %1
  store i32 2, i32* %2, align 4
  br label %10

8:                                                ; preds = %1
  %9 = call i32 @assert(i32 0)
  br label %10

10:                                               ; preds = %6, %7, %8
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
